[package]
name = "advancedresearch-tree_mem_sort"
version = "0.1.0"
authors = ["Sven Nilsen <bvssvni@gmail.com>"]
edition = "2018"
keywords = ["advancedresearch", "tree", "sort", "group", "theory"]
description = "An in-memory topological sort algorithm for trees based on Group Theory"
license = "MIT"
repository = "https://github.com/advancedresearch/tree_mem_sort.git"
homepage = "https://github.com/advancedresearch/tree_mem_sort"
documentation = "https://docs.rs/advancedresearch-tree_mem_sort"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "tree_mem_sort"

[dependencies]
